syntax = "proto3";

package user;

// Definisi layanan UserService
service UserService {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc ListUsers(ListUsersRequest) returns (UserListResponse);
  rpc CreateAdmin(RegisterRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(GetUserRequest) returns (Empty);
}

// Pesan kosong untuk rpc DeleteUser
message Empty {}

// Request untuk registrasi user baru
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone_number = 4;
}

// Request untuk login
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Request untuk mengambil data user berdasarkan ID
message GetUserRequest {
  string id = 1;
}

// Request untuk list user dengan filter role
message ListUsersRequest {
  string role_filter = 1;
}

// Request untuk memperbarui data user
message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;           // Tag nomor 4 untuk role
  string phone_number = 5;
  string profile_picture = 6;
}

// Struktur data User utama
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;           // Tag nomor 4 wajib sama di kedua sisi
  string created_at = 5;
  string phone_number = 6;
  string profile_picture = 7;
}

// Response berisi objek user tunggal
message UserResponse {
  User user = 1;
}

// Response login berisi user dan token JWT
message LoginResponse {
  User user = 1;
  string token = 2;
}

// Response list user berisi array/repeated user
message UserListResponse {
  repeated User users = 1;
}